--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -3,21 +3,21 @@
     flex-direction: column;
     align-items: center;
     padding-bottom: 125px;
-    transition-property: max-width, padding-bottom;
+    transition-property: width, padding-bottom;
     transition-duration: 600ms;
-    max-width: 1140px;
+    width: 89.1%;
 }
 
 @media screen and (max-width: 1200px) {
     .about-me {
-        max-width: 668px;
+        width: 87%;
         padding-bottom: 90px;
     }
 }
 
 @media screen and (max-width: 700px) {
     .about-me {
-        max-width: 292px;
+        width: 91.25%;
     }
 }
 
@@ -25,7 +25,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    min-width: 1140px;
+    width: 100%;
     margin: 66px 0 0;
     padding: 0;
     list-style: none;
@@ -33,65 +33,42 @@
     transition-duration: 600ms;
 }
 
-@media screen and (max-width: 1200px) {
-    .about-me__list {
-        min-width: 668px;
-    }
-}
-
 @media screen and (max-width: 700px) {
     .about-me__list {
+        align-items: center;
         margin: 60px 0 0;
-        min-width: 292px;
         flex-direction: column-reverse;
     }
 }
 
 .about-me__title {
     color: #FFF;
+    width: 100%;
     font-family: Inter;
     font-size: 22px;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
     letter-spacing: -0.88px;
-    margin: 113px auto 23px 0;
+    margin: 113px auto 0 0;
+    padding-bottom: 23px;
+    border-bottom: 1px solid #DADADA;
     transition-property: margin, font-size, letter-spacing;
     transition-duration: 600ms;
 }
 
 @media screen and (max-width: 1200px) {
     .about-me__title {
-        margin: 90px auto 23px 0;
+        margin: 90px auto 0 0;
     }
 }
 
 @media screen and (max-width: 700px) {
     .about-me__title {
-        margin: 70px auto 28px 0;
+        margin: 70px auto 0 0;
+        padding-bottom: 28px;
         font-size: 18px;
         letter-spacing: -0.72px;
-    }
-}
-
-.about-me__line {
-    min-width: 1140px;
-    height: 1px;
-    background-color: #DADADA;
-    padding: 0;
-    transition-property: min-width;
-    transition-duration: 600ms;
-}
-
-@media screen and (max-width: 1200px) {
-    .about-me__line {
-        min-width: 668px;
-    }
-}
-
-@media screen and (max-width: 700px) {
-    .about-me__line {
-        min-width: 292px;
     }
 }
 
