--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,5 +1,5 @@
 .header {
-    min-width: 89%;
+    width: 89%;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -8,7 +8,7 @@
     transition-duration: 600ms;
 }
 
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 768px) {
     .header {
         min-width: 92.2%;
     }
@@ -51,4 +51,3 @@
     border-radius: 3px;
     padding: 8px 20px;
 }
-
