--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -15,7 +15,8 @@
     justify-content: space-between;
     padding: 0 14px;
     margin-top: 12px;
-    transition: margin-top 600ms padding 600ms;
+    transition-property: margin-top,  padding;
+    transition-duration: 600ms;
 }
 
 .movies-card__image {
@@ -73,7 +74,7 @@
 
 @media screen and (max-width: 1200px) {
     .movies-card__image {
-        max-width: 339px;
+        max-width: 100%;
     }
 
     .movies-card__container {
@@ -88,7 +89,7 @@
 
 @media screen and (max-width: 740px) {
     .movies-card__image {
-        max-width: 300px;
+        max-width: 100%;
     }
 
     .movies-card__container {
