--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -1,3 +1,6 @@
+.portfolio {
+    width: 100%;
+}
 .portfolio__title {
     color: #8B8B8B;
     font-feature-settings: 'clig' off, 'liga' off;
@@ -28,20 +31,20 @@
     margin: 0;
     padding: 0;
     list-style-type: none;
-    min-width: 1140px;
+    min-width: 100%;
     transition-property: min-width;
     transition-duration: 600ms;
 }
 
 @media screen and (max-width: 1200px) {
     .portfolio__list {
-        min-width: 668px;
+        min-width: 100%;
     }
 }
 
 @media screen and (max-width: 700px) {
     .portfolio__list {
-        min-width: 292px;
+        min-width: 100%;
     }
 }
 
