--- a/src/components/Techs/Techs.css
+++ b/src/components/Techs/Techs.css
@@ -1,77 +1,62 @@
 .techs {
+    width: 100%;
+    background-color: #272727;
     display: flex;
-    min-width: 1280px;
     flex-direction: column;
     align-items: center;
-    background-color: #272727;
-    transition-property: min-width, background-color;
-    transition-duration: 600ms;
-}
-
-@media screen and (max-width: 1200px) {
-    .techs {
-        min-width: 768px;
-    }
 }
 
 @media screen and (max-width: 700px) {
     .techs {
-        min-width: 320px;
+        width: 100%;
         background-color: #202020;
+    }
+}
+
+.techs__container {
+    display: flex;
+    width: 89%;
+    flex-direction: column;
+    transition-property: width, background-color;
+    transition-duration: 600ms;
+}
+
+@media screen and (max-width: 1200px) {
+    .techs__container {
+        width: 86.97%;
+    }
+}
+
+@media screen and (max-width: 700px) {
+    .techs__container {
+        width: 88.75%;
     }
 }
 
 .techs__title {
     color: #FFF;
+    width: 100%;
     font-family: Inter;
     font-size: 22px;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
     letter-spacing: -0.88px;
-    margin: 101px auto 0 70px;
+    margin: 101px 0 0;
+    padding-bottom: 23px;
     transition-property: margin;
     transition-duration: 600ms;
-}
-
-@media screen and (max-width: 1200px) {
-    .techs__title {
-        margin: 90px auto 0 50px;
-    }
+    border-bottom: 1px solid #DADADA;
 }
 
 @media screen and (max-width: 700px) {
     .techs__title {
-        margin: 70px auto 0 18px;
+        margin: 70px 0 0;
         font-size: 18px;
         letter-spacing: -0.72px;
+        border-bottom: 1px solid #000;
     }
 }
-
-.techs__line {
-    margin: 23px auto 0;
-    min-width: 1140px;
-    height: 1px;
-    background-color: #DADADA;
-    padding: 0;
-    transition-property: min-width, margin, background-color;
-    transition-duration: 600ms;
-}
-
-@media screen and (max-width: 1200px) {
-    .techs__line {
-        min-width: 686px;
-    }
-}
-
-@media screen and (max-width: 700px) {
-    .techs__line {
-        min-width: 284px;
-        margin: 28px auto 0;
-        background-color: #000;
-    }
-}
-
 
 .techs__subtitle {
     color: #FFF;
@@ -147,7 +132,7 @@
     }
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 720px) {
     .techs__list {
         display: grid;
         grid-template-columns: 1fr 1fr;
@@ -186,10 +171,11 @@
     }
 }
 
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 720px) {
     .techs__item {
         margin-left: 0;
     }
+
 }
 
 
