--- a/src/components/AuthForm/AuthForm.css
+++ b/src/components/AuthForm/AuthForm.css
@@ -1,4 +1,4 @@
-.auth {
+.form {
     display: flex;
     flex-direction: column;
     max-width: 396px;
@@ -8,31 +8,31 @@
 }
 
 @media screen and (max-width: 460px) {
-    .auth {
+    .form {
         max-width: 260px;
     }
 }
 
-.auth__logo {
+.form__logo {
     margin: 70px auto 36px;
     transition-property: margin, display;
     transition-duration: 600ms;
 }
 
 @media screen and (max-width: 769px) {
-    .auth__logo {
+    .form__logo {
         margin: 232px auto 36px;
     }
 }
 
 @media screen and (max-width: 460px) {
-    .auth__logo {
+    .form__logo {
         display: flex;
         margin: 56px auto 50px;
     }
 }
 
-.auth__title {
+.form__title {
     color: #FFF;
     font-family: Inter;
     text-align: start;
@@ -48,27 +48,32 @@
 }
 
 @media screen and (max-width: 460px) {
-    .auth__title {
+    .form__title {
         text-align: center;
         margin-bottom: 80px;
     }
 }
 
-.auth__form {
+.form__form {
     display: flex;
     flex-direction: column;
 }
 
-.auth__label {
+.form__label {
     color: #8B8B8B;
     font-family: Inter;
     font-size: 10px;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
+    margin-bottom: 10px;
 }
 
-.auth__input {
+.form__label:last-of-type {
+    margin-bottom: 0;
+}
+
+.form__input {
     border-radius: 8px;
     background: #2F2F2F;
     border: none;
@@ -81,13 +86,13 @@
     line-height: normal;
     padding: 15px 15px;
     margin-top: 10px;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     transition-property: max-width, font-style, font-weight, line-height, min-width;
     transition-duration: 600ms;
 }
 
 @media screen and (max-width: 460px) {
-    .auth__input {
+    .form__input {
         color: #FFF;
         font-family: Inter;
         font-size: 13px;
@@ -98,7 +103,7 @@
     }
 }
 
-.auth__button {
+.form__button {
     color: #FFF;
     text-align: center;
     font-family: Inter;
@@ -120,7 +125,29 @@
     transition-duration: 600ms;
 }
 
-.auth__button-login {
+.form__button-disabled {
+    color: #C2C2C2;
+    text-align: center;
+    font-family: Inter;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    border-radius: 3px;
+    border: none;
+    background: #F8F8F8;
+    cursor: pointer;
+    padding: 0;
+    margin: 0;
+    margin-top: 71px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    margin-bottom: 16px;
+    transition-property: max-width, font-style, font-weight, line-height, ;
+    transition-duration: 600ms;
+}
+
+.form__button-login {
     color: #FFF;
     text-align: center;
     font-family: Inter;
@@ -142,8 +169,30 @@
     transition-duration: 600ms;
 }
 
+.form__button-login-disabled {
+    color: #C2C2C2;
+    text-align: center;
+    font-family: Inter;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    border-radius: 3px;
+    border: none;
+    background: #F8F8F8;
+    cursor: pointer;
+    padding: 0;
+    margin: 0;
+    margin-top: 159px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    margin-bottom: 16px;
+    transition-property: max-width, font-style, font-weight, line-height, ;
+    transition-duration: 600ms;
+}
+
 @media screen and (max-width: 460px) {
-    .auth__button {
+    .form__button {
         color: #FFF;
         text-align: center;
         font-family: Inter;
@@ -155,7 +204,19 @@
         margin-top: 157px;
     }
 
-    .auth__button-login {
+    .form__button-disabled {
+        color: #C2C2C2;
+        text-align: center;
+        font-family: Inter;
+        font-size: 12px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: normal;
+        min-width: 260px;
+        margin-top: 157px;
+    }
+
+    .form__button-login {
         color: #FFF;
         text-align: center;
         font-family: Inter;
@@ -166,9 +227,22 @@
         min-width: 260px;
         margin-top: 247px;
     }
+
+    .form__button-login-disabled {
+        color: #C2C2C2;
+        text-align: center;
+        font-family: Inter;
+        font-size: 12px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: normal;
+        min-width: 260px;
+        margin-top: 247px;
+    }
+
 }
 
-.auth__span {
+.form__span {
     color: #8B8B8B;
     text-align: center;
     font-family: Inter;
@@ -184,20 +258,20 @@
 }
 
 @media screen and (max-width: 769px) {
-    .auth__span {
+    .form__span {
         margin-bottom: 232px;
 
     }
 }
 
 @media screen and (max-width: 460px) {
-    .auth__span {
+    .form__span {
         margin-bottom: 30px;
         font-size: 12px;
     }
 }
 
-.auth__link {
+.form__link {
     color: #4285F4;
     text-align: center;
     font-family: Inter;
@@ -211,11 +285,14 @@
 }
 
 @media screen and (max-width: 460px) {
-    .auth__link {
+    .form__link {
         font-size: 12px;
     }
 }
 
-.auth__label-none {
-    display: none;
+.form__error {
+    color: #ee3465;
+    font-size: 10px;
+    font-weight: 400;
+    line-height: normal;
 }
