--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -20,9 +20,11 @@
 }
 
 .movies-card__image {
-    max-width: 360px;
+    width: 360px;
+    height: 201px;
     border-radius: 9px;
     transition: max-width 600ms;
+    object-fit: cover;
 }
 
 .movies-card__title {
@@ -71,6 +73,13 @@
     font-weight: 400;
     line-height: 9px;
 }
+
+.movies-card__button-active{
+    background-image: url('../../images/save3.svg');
+    width: 21px;
+    height: 21px;
+}
+
 
 @media screen and (max-width: 1200px) {
     .movies-card__image {
