--- a/src/components/Navigation/NavigationAuthorized/NavigationAuthorized.css
+++ b/src/components/Navigation/NavigationAuthorized/NavigationAuthorized.css
@@ -5,7 +5,7 @@
     padding: 0;
     list-style: none;
     width: 100%;
-    justify-content: end;
+    justify-content: flex-end;
     transition-property: width, height;
     transition-duration: 600ms;
 }
@@ -84,7 +84,7 @@
 
 .navigation-auth__nav {
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
     height: 100%;
 }
 
@@ -127,7 +127,7 @@
     display: flex;
     flex-direction: row;
     width: 100%;
-    justify-content: end;
+    justify-content: flex-end;
     margin-left: auto;
     padding: 0;
 }
