--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -11,7 +11,7 @@
 .seacrh-form__container {
     display: flex;
     flex-direction: row;
-    align-items: center;
+    justify-content: space-between  ;
 }
 
 .seacrh-form__input {
@@ -33,6 +33,21 @@
     transition-duration: 600ms;
 }
 
+.search-form__container-span {
+    display: flex;
+    flex-direction: column;
+    width: 93.5%;
+}
+
+.search-form__span {
+    color: #ee3465;
+    font-size: 10px;
+    font-weight: 400;
+    line-height: normal;
+    margin-left: 25px;
+    margin-top: 10px;
+}
+
 .seacrh-form__button {
     padding: 0;
     border: none;
@@ -41,12 +56,13 @@
     height: 44px;
     border-radius: 5px;
     cursor: pointer;
+    margin-top: 3px;
 }
 
 @media screen and (max-width: 740px) {
     .seacrh-form {
         width: 97.33%;
-        
+
     }
 
     .seacrh-form__container {
